[project]
name = "ingestion"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "cryptography>=49.0.0",
    "pydantic-settings>=2.14.2",
    "pyjwt>=2.13.0",
    "requests>=2.34.2",
    "websocket-client>=1.9.0",
    "websockets>=16.1",
]
